--- a/src/styles/PrevRaces.css
+++ b/src/styles/PrevRaces.css
@@ -51,11 +51,6 @@
 }
 
 
-/* .prevRacesComponent button {
-    text-align: center;
-} */
-
-
 /* MEDIA QUERIES */
 
 @media screen and (max-width: 1250px) {
